kubernetes/app/myapp-prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myapp-prod
  labels:
    app.kubernetes.io/name: fifa-api
    app.kubernetes.io/instance: prod
    app.kubernetes.io/part-of: fifa-cicd-platform
    environment: prod
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
