kubernetes/app/myapp-prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fifa-api
  namespace: myapp-prod
  labels:
    app.kubernetes.io/name: fifa-api
    app.kubernetes.io/instance: prod
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: fifa-api
    app.kubernetes.io/instance: prod
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
